6+ img in carousel

--- a/src/styles.less
+++ b/src/styles.less
@@ -337,7 +337,7 @@ a {
 .popups {
 
 	&--item {
-		// display: none;
+		display: none;
 		position: absolute;
 		width: 300px;
 		height: 400px;
@@ -350,9 +350,9 @@ a {
 		box-sizing: border-box;
 		background-image: url('@{imgPath}/popup-bg.jpg');
 
-		&:nth-child(2) {
-			z-index: 10;
-		}
+		// &:nth-child(5) {
+		// 	z-index: 10;
+		// }
 	}
 
 	&--carousel--item {
@@ -536,6 +536,16 @@ a {
 		position: relative;
 	}
 
+	&--img {
+		width: 118px;
+		height: 157px;
+
+		img {
+			width: 100%;
+			height: 100%;
+		}
+	}
+
 	&--name {
 		position: absolute;
 		top: 55%;
@@ -562,16 +572,23 @@ a {
 	}	
 }
 
-.slick-slide {
-	opacity: 0.4;
-}
 
-.slick-current {
-	opacity: 1;
-}
+.slick {
+	&-dots button {
+		display: none;
+	}
+	&-slide {
+		// opacity: 0.4;
+	}
 
-.slick-disabled {
-	display: none !important;
+	&-current {
+		// opacity: 1;
+	}
+
+	&-disabled {
+		display: none !important;
+	}
+
 }
 
 .popups--carousel-dots .slick-active {
@@ -607,265 +624,275 @@ a {
 
 /* Global Styles */
 
-.wrapper {
-	width: 330px;
-}
-
-.navlink {
-	font-family: Bungee;
-	font-size: 21px;
-	line-height: 30px;
-	color: @color__primary;
-	text-transform: uppercase;
-	text-decoration: none;
-}
-
-/* Dropdown Menu */
-
-.dropdown-menu {
-
-	&--list {
-		margin-bottom: 58px;
+	.wrapper {
+		width: 330px;
 	}
 
-	&--item {
+	.navlink {
+		font-family: Bungee;
+		font-size: 21px;
+		line-height: 30px;
+		color: @color__primary;
+		text-transform: uppercase;
+		text-decoration: none;
+	}
+
+	/* Dropdown Menu */
+
+	.dropdown-menu {
+
+		&--list {
+			margin-bottom: 58px;
+		}
+
+		&--item {
+			margin-bottom: 15px;
+		}
+
+		&--random {
+
+			margin-bottom: 70px;
+
+			a {
+				padding: 15px 40px;
+				margin-bottom: 20px;
+				font-size: 16px;
+			}
+
+			&-msg {
+				max-width: 140px;
+
+				& div {
+					font-size: 16px;
+					line-height: 18px;
+				}
+			}
+		}
+
+		&--number {
+			font-size: 14px;
+			line-height: 25px;
+
+			span {
+				font-size: 18px;
+				letter-spacing: 0.64px;
+			}
+		}
+	}
+
+	.header {
+		margin-top: 20px;
 		margin-bottom: 15px;
 	}
 
-	&--random {
+	.nav {
+		overflow-x: scroll;
+		white-space: nowrap;
 
-		margin-bottom: 70px;
+		&--list {
+			margin: 0;
+			padding: 0;
+			padding-left: 20px;
+			list-style: none;
+		}
 
-		a {
-			padding: 15px 40px;
+		&--item {
+			display: inline-block;
+			margin-right: 15px;
+
+		}
+
+	}
+
+	.intro {
+		margin-bottom: 15px;
+
+		&--title {
+			font-size: 20px;
+			line-height: 19px;
+			letter-spacing: -0.39px;
+
+		}
+
+		&--text {
 			margin-bottom: 20px;
-			font-size: 16px;
+			font-size: 14px;
+			line-height: 18px;
+		}
+	}
+
+	.info-random {
+
+		&--item {
+			margin-bottom: 20px;
+			padding-left: 35px;
+			font-size: 14px;
+			line-height: 18px;
+			letter-spacing: -0.92px;
+
+		}
+	}
+
+	/* Popups */
+
+	.popups {
+
+		&--item {
+			width: 350px;
+			height: 475px;
 		}
 
-		&-msg {
-			max-width: 140px;
+		&--carousel-window {
+			width: 258px;
+			height: 155px;
+			margin-bottom: 25px;
 
-			& div {
-				font-size: 16px;
-				line-height: 18px;
+		}
+
+		&--carousel-dots {
+			position: absolute;
+			width: 50px;
+			height: 8px;
+			top: 46%;
+
+			ul {
+				margin: 0;
+				padding: 0;
+				list-style: none;
+			}
+
+			li {
+				display: inline-block;
+				font-size: 0;
+				display: inline-block;
+				width: 6px;
+				height: 6px;
+				margin-right: 6px;
+				border: 1px solid #000;
+				border-radius: 50% 50%;
+
+				&:last-child {
+					margin-right: 0;
+				}
 			}
 		}
-	}
 
-	&--number {
-		font-size: 14px;
-		line-height: 25px;
-
-		span {
-			font-size: 18px;
-			letter-spacing: 0.64px;
-		}
-	}
-}
-
-.header {
-	margin-top: 20px;
-	margin-bottom: 15px;
-}
-
-.nav {
-	overflow-x: scroll;
-	white-space: nowrap;
-
-	&--list {
-		margin: 0;
-		padding: 0;
-		padding-left: 20px;
-		list-style: none;
-	}
-
-	&--item {
-		display: inline-block;
-		margin-right: 15px;
-
-	}
-
-}
-
-.intro {
-	margin-bottom: 15px;
-
-	&--title {
-		font-size: 20px;
-		line-height: 19px;
-		letter-spacing: -0.39px;
-
-	}
-
-	&--text {
-		margin-bottom: 20px;
-		font-size: 14px;
-		line-height: 18px;
-	}
-}
-
-.info-random {
-
-	&--item {
-		margin-bottom: 20px;
-		padding-left: 35px;
-		font-size: 14px;
-		line-height: 18px;
-		letter-spacing: -0.92px;
-
-	}
-}
-
-/* Popups */
-
-.popups {
-
-	&--item {
-		width: 350px;
-		height: 475px;
-	}
-
-	&--carousel-window {
-		width: 258px;
-		height: 155px;
-		margin-bottom: 25px;
-
-	}
-
-	&--carousel-dots {
-		position: absolute;
-		width: 50px;
-		height: 8px;
-		top: 46%;
-
-		ul {
-			margin: 0;
-			padding: 0;
-			list-style: none;
-		}
-
-		li {
-			display: inline-block;
-			font-size: 0;
-			display: inline-block;
-			width: 6px;
-			height: 6px;
-			margin-right: 6px;
-			border: 1px solid #000;
-			border-radius: 50% 50%;
-
-			&:last-child {
-				margin-right: 0;
-			}
-		}
-	}
-
-	&--title {
-		margin-top: 20px;
-		margin-bottom: 10px;
-		font-family: Bungee;
-		font-size: 25px;
-		line-height: 30px;
-		text-align: center;
-	}
-
-	&--text {
-		font-size: 13px;
-		line-height: 18px;
-		color: #333333;
-	}
-
-	&--link {
-		color: @color__link;
-	}
-
-	&-frame {
-		width: 227px;
-		height: 128px;
-	}
-
-	&--info {
-		color: #333333;
-
-		h4 {
+		&--title {
+			margin-top: 20px;
 			margin-bottom: 10px;
+			font-family: Bungee;
+			font-size: 25px;
+			line-height: 30px;
+			text-align: center;
 		}
 
-	}
-
-
-
-	&--carousel-person--dots {
-		position: absolute;
-		width: 50px;
-		height: 8px;
-		bottom: 4%;
-		left: 50%;
-		transform: translateX(-50%);
-
-		ul {
-			margin: 0;
-			padding: 0;
-			list-style: none;
+		&--text {
+			font-size: 13px;
+			line-height: 18px;
+			color: #333333;
 		}
 
-		li {
-			display: inline-block;
-			font-size: 0;
-			display: inline-block;
-			width: 6px;
-			height: 6px;
-			margin-right: 6px;
-			border: 1px solid #000;
-			border-radius: 50% 50%;
+		&--link {
+			color: @color__link;
+		}
 
-			&:last-child {
-				margin-right: 0;
+		&-frame {
+			width: 227px;
+			height: 128px;
+		}
+
+		&--info {
+			color: #333333;
+
+			h4 {
+				margin-bottom: 10px;
+			}
+
+		}
+
+
+
+		&--carousel-person--dots {
+			position: absolute;
+			width: 50px;
+			height: 8px;
+			bottom: 4%;
+			left: 50%;
+			transform: translateX(-50%);
+
+			ul {
+				margin: 0;
+				padding: 0;
+				list-style: none;
+			}
+
+			li {
+				display: inline-block;
+				font-size: 0;
+				display: inline-block;
+				width: 6px;
+				height: 6px;
+				margin-right: 6px;
+				border: 1px solid #000;
+				border-radius: 50% 50%;
+
+				&:last-child {
+					margin-right: 0;
+				}
 			}
 		}
 	}
-}
 
-.person {
+	.person {
 
-	margin-bottom: 20px;
+		margin-bottom: 20px;
 
-	&--profile {
-		position: relative;
-	}
-
-	&--name {
-		position: absolute;
-		top: 55%;
-		left: 15px;
-		font-family: Camcorder;
-		font-size: 19px;
-		line-height: 19px;
-		letter-spacing: -0.17px;
-		color: #fff;
-
-		span {
-			display: inline-block;
-			padding-right: 10px;
-			background: #A8DA68;
+		&--profile {
+			position: relative;
 		}
+
+		&--img {
+		width: 130px;
+		height: 170px;
+
+			img {
+				width: 100%;
+				height: 100%;
+			}
+		}
+
+		&--name {
+			position: absolute;
+			top: 55%;
+			left: 19%;
+			font-family: Camcorder;
+			font-size: 19px;
+			line-height: 19px;
+			letter-spacing: -0.17px;
+			color: #fff;
+
+			span {
+				display: inline-block;
+				padding-right: 10px;
+				background: #A8DA68;
+			}
+		}
+
+		&--position {
+			margin-top: 5px;
+			padding-left: 15px;
+			font-family: Camcorder;
+			font-size: 14px;
+			line-height: 16px;
+		}	
 	}
 
-	&--position {
-		margin-top: 5px;
-		padding-left: 15px;
-		font-family: Camcorder;
-		font-size: 14px;
-		line-height: 16px;
+
+	/* Footer */
+
+	.footer {
+		font-size: 11px;
 	}	
-}
-
-
-/* Footer */
-
-.footer {
-	font-size: 11px;
-}	
 
 }
 
@@ -873,266 +900,276 @@ a {
 	
 	/* Global Styles */
 
-.wrapper {
-	width: 370px;
-}
-
-.navlink {
-	font-family: Bungee;
-	font-size: 21px;
-	line-height: 30px;
-	color: @color__primary;
-	text-transform: uppercase;
-	text-decoration: none;
-}
-
-/* Dropdown Menu */
-
-.dropdown-menu {
-
-	&--list {
-		margin-bottom: 58px;
+	.wrapper {
+		width: 370px;
 	}
 
-	&--item {
+	.navlink {
+		font-family: Bungee;
+		font-size: 21px;
+		line-height: 30px;
+		color: @color__primary;
+		text-transform: uppercase;
+		text-decoration: none;
+	}
+
+	/* Dropdown Menu */
+
+	.dropdown-menu {
+
+		&--list {
+			margin-bottom: 58px;
+		}
+
+		&--item {
+			margin-bottom: 15px;
+		}
+
+		&--random {
+
+			margin-bottom: 70px;
+
+			a {
+				padding: 15px 40px;
+				margin-bottom: 20px;
+				font-size: 16px;
+			}
+
+			&-msg {
+				max-width: 140px;
+
+				& div {
+					font-size: 16px;
+					line-height: 18px;
+				}
+			}
+		}
+
+		&--number {
+			font-size: 14px;
+			line-height: 25px;
+
+			span {
+				font-size: 18px;
+				letter-spacing: 0.64px;
+			}
+		}
+	}
+
+	.header {
+		margin-top: 20px;
 		margin-bottom: 15px;
 	}
 
-	&--random {
+	.nav {
+		overflow-x: scroll;
+		white-space: nowrap;
 
-		margin-bottom: 70px;
+		&--list {
+			margin: 0;
+			padding: 0;
+			padding-left: 20px;
+			list-style: none;
+		}
 
-		a {
-			padding: 15px 40px;
+		&--item {
+			display: inline-block;
+			margin-right: 15px;
+
+		}
+
+	}
+
+	.intro {
+		margin-bottom: 15px;
+
+		&--title {
+			margin-bottom: 10px;
+			font-size: 20px;
+			line-height: 19px;
+			letter-spacing: -0.39px;
+
+		}
+
+		&--text {
 			margin-bottom: 20px;
 			font-size: 16px;
+			line-height: 18px;
+		}
+	}
+
+	.info-random {
+
+		&--item {
+			margin-bottom: 20px;
+			padding-left: 35px;
+			font-size: 16px;
+			line-height: 20px;
+			letter-spacing: -0.92px;
+
+		}
+	}
+
+	/* Popups */
+
+	.popups {
+
+		&--item {
+			width: 390px;
+			height: 490px;
 		}
 
-		&-msg {
-			max-width: 140px;
+		&--carousel-window {
+			width: 300px;
+			height: 165px;
+			margin-bottom: 25px;
 
-			& div {
-				font-size: 16px;
-				line-height: 18px;
+		}
+
+		&--carousel-dots {
+			position: absolute;
+			width: 50px;
+			height: 8px;
+			top: 46%;
+
+			ul {
+				margin: 0;
+				padding: 0;
+				list-style: none;
+			}
+
+			li {
+				display: inline-block;
+				font-size: 0;
+				display: inline-block;
+				width: 6px;
+				height: 6px;
+				margin-right: 6px;
+				border: 1px solid #000;
+				border-radius: 50% 50%;
+
+				&:last-child {
+					margin-right: 0;
+				}
 			}
 		}
-	}
 
-	&--number {
-		font-size: 14px;
-		line-height: 25px;
-
-		span {
-			font-size: 18px;
-			letter-spacing: 0.64px;
-		}
-	}
-}
-
-.header {
-	margin-top: 20px;
-	margin-bottom: 15px;
-}
-
-.nav {
-	overflow-x: scroll;
-	white-space: nowrap;
-
-	&--list {
-		margin: 0;
-		padding: 0;
-		padding-left: 20px;
-		list-style: none;
-	}
-
-	&--item {
-		display: inline-block;
-		margin-right: 15px;
-
-	}
-
-}
-
-.intro {
-	margin-bottom: 15px;
-
-	&--title {
-		margin-bottom: 10px;
-		font-size: 20px;
-		line-height: 19px;
-		letter-spacing: -0.39px;
-
-	}
-
-	&--text {
-		margin-bottom: 20px;
-		font-size: 16px;
-		line-height: 18px;
-	}
-}
-
-.info-random {
-
-	&--item {
-		margin-bottom: 20px;
-		padding-left: 35px;
-		font-size: 16px;
-		line-height: 20px;
-		letter-spacing: -0.92px;
-
-	}
-}
-
-/* Popups */
-
-.popups {
-
-	&--item {
-		width: 390px;
-		height: 490px;
-	}
-
-	&--carousel-window {
-		width: 300px;
-		height: 165px;
-		margin-bottom: 25px;
-
-	}
-
-	&--carousel-dots {
-		position: absolute;
-		width: 50px;
-		height: 8px;
-		top: 46%;
-
-		ul {
-			margin: 0;
-			padding: 0;
-			list-style: none;
-		}
-
-		li {
-			display: inline-block;
-			font-size: 0;
-			display: inline-block;
-			width: 6px;
-			height: 6px;
-			margin-right: 6px;
-			border: 1px solid #000;
-			border-radius: 50% 50%;
-
-			&:last-child {
-				margin-right: 0;
-			}
-		}
-	}
-
-	&--title {
-		margin-top: 20px;
-		margin-bottom: 10px;
-		font-family: Bungee;
-		font-size: 25px;
-		line-height: 30px;
-		text-align: center;
-	}
-
-	&--text {
-		font-size: 13px;
-		line-height: 18px;
-		color: #333333;
-	}
-
-	&--link {
-		color: @color__link;
-	}
-
-	&-frame {
-		width: 227px;
-		height: 128px;
-	}
-
-	&--info {
-		color: #333333;
-
-		h4 {
+		&--title {
+			margin-top: 20px;
 			margin-bottom: 10px;
+			font-family: Bungee;
+			font-size: 25px;
+			line-height: 30px;
+			text-align: center;
 		}
 
-	}
-
-
-
-	&--carousel-person--dots {
-		position: absolute;
-		width: 50px;
-		height: 8px;
-		bottom: 4%;
-		left: 50%;
-		transform: translateX(-50%);
-
-		ul {
-			margin: 0;
-			padding: 0;
-			list-style: none;
+		&--text {
+			font-size: 13px;
+			line-height: 18px;
+			color: #333333;
 		}
 
-		li {
-			display: inline-block;
-			font-size: 0;
-			display: inline-block;
-			width: 6px;
-			height: 6px;
-			margin-right: 6px;
-			border: 1px solid #000;
-			border-radius: 50% 50%;
+		&--link {
+			color: @color__link;
+		}
 
-			&:last-child {
-				margin-right: 0;
+		&-frame {
+			width: 227px;
+			height: 128px;
+		}
+
+		&--info {
+			color: #333333;
+
+			h4 {
+				margin-bottom: 10px;
+			}
+
+		}
+
+
+
+		&--carousel-person--dots {
+			position: absolute;
+			width: 50px;
+			height: 8px;
+			bottom: 4%;
+			left: 50%;
+			transform: translateX(-50%);
+
+			ul {
+				margin: 0;
+				padding: 0;
+				list-style: none;
+			}
+
+			li {
+				display: inline-block;
+				font-size: 0;
+				display: inline-block;
+				width: 6px;
+				height: 6px;
+				margin-right: 6px;
+				border: 1px solid #000;
+				border-radius: 50% 50%;
+
+				&:last-child {
+					margin-right: 0;
+				}
 			}
 		}
 	}
-}
 
-.person {
+	.person {
 
-	margin-bottom: 20px;
+		margin-bottom: 20px;
 
-	&--profile {
-		position: relative;
-	}
-
-	&--name {
-		position: absolute;
-		top: 55%;
-		left: 15px;
-		font-family: Camcorder;
-		font-size: 19px;
-		line-height: 19px;
-		letter-spacing: -0.17px;
-		color: #fff;
-
-		span {
-			display: inline-block;
-			padding-right: 10px;
-			background: #A8DA68;
+		&--profile {
+			position: relative;
 		}
+
+		&--img {
+		width: 140px;
+		height: 180px;
+
+			img {
+				width: 100%;
+				height: 100%;
+			}
+		}
+
+		&--name {
+			position: absolute;
+			top: 55%;
+			left: 22%;
+			font-family: Camcorder;
+			font-size: 19px;
+			line-height: 19px;
+			letter-spacing: -0.17px;
+			color: #fff;
+
+			span {
+				display: inline-block;
+				padding-right: 10px;
+				background: #A8DA68;
+			}
+		}
+
+		&--position {
+			margin-top: 5px;
+			padding-left: 15px;
+			font-family: Camcorder;
+			font-size: 14px;
+			line-height: 16px;
+		}	
 	}
 
-	&--position {
-		margin-top: 5px;
-		padding-left: 15px;
-		font-family: Camcorder;
-		font-size: 14px;
-		line-height: 16px;
+
+	/* Footer */
+
+	.footer {
+		font-size: 12px;
 	}	
-}
-
-
-/* Footer */
-
-.footer {
-	font-size: 12px;
-}	
 
 }
 
