--- a/src/styles.less
+++ b/src/styles.less
@@ -337,7 +337,7 @@ a {
 .popups {
 
 	&--item {
-		display: none;
+		// display: none;
 		position: absolute;
 		width: 300px;
 		height: 400px;
@@ -350,9 +350,9 @@ a {
 		box-sizing: border-box;
 		background-image: url('@{imgPath}/popup-bg.jpg');
 
-		// &:nth-child(5) {
-		// 	z-index: 10;
-		// }
+		&:nth-child(5) {
+			z-index: 10;
+		}
 	}
 
 	&--carousel--item {
